[gd_scene load_steps=9 format=3 uid="uid://douityyj76al4"]

[ext_resource type="Script" path="res://Common/MainScene/GameManager.gd" id="1_d6va0"]
[ext_resource type="PackedScene" uid="uid://62n6lc63rm26" path="res://Maps/DEVROOM/devroom1.tscn" id="1_v3vin"]
[ext_resource type="PackedScene" uid="uid://dyt3dg1al01ao" path="res://Utils/TimeSystem/Time.tscn" id="2_fiet3"]
[ext_resource type="PackedScene" uid="uid://xeqjgy6gnfs" path="res://Common/Camera/Camera.tscn" id="2_m0yeh"]
[ext_resource type="PackedScene" uid="uid://cmjplav76x5mc" path="res://Common/WindowManager/WindowManager.tscn" id="3_0xth8"]
[ext_resource type="PackedScene" uid="uid://dafx4llrs7i7h" path="res://Common/InventorySystem/Inventory.tscn" id="3_dp4xh"]
[ext_resource type="PackedScene" uid="uid://capi4r314uane" path="res://Entities/Vegetation/Trees/Birch/TreeBirch.tscn" id="7_j45y5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_o8jpl"]
size = Vector3(1, 5, 40)

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6va0")

[node name="Time" parent="." instance=ExtResource("2_fiet3")]

[node name="Viewport" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Viewport"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(240, 135)

[node name="SubViewport" type="SubViewport" parent="Viewport/SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(480, 270)
render_target_update_mode = 4

[node name="Camera" parent="Viewport/SubViewportContainer/SubViewport" instance=ExtResource("2_m0yeh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, -7)

[node name="Camera3D" parent="Viewport/SubViewportContainer/SubViewport/Camera" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1, 32, 50)

[node name="ColorRect" type="ColorRect" parent="Viewport/SubViewportContainer"]
layout_mode = 2

[node name="WindowManager" parent="." instance=ExtResource("3_0xth8")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CanvasInventory" type="CanvasLayer" parent="UI"]

[node name="InventoryInferface" type="Control" parent="UI/CanvasInventory"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" parent="UI/CanvasInventory/InventoryInferface" node_paths=PackedStringArray("canvas_layer", "inventory_interface") instance=ExtResource("3_dp4xh")]
unique_name_in_owner = true
layout_mode = 1
canvas_layer = NodePath("../..")
inventory_interface = NodePath("..")

[node name="MAP_DEVROOM1" parent="." instance=ExtResource("1_v3vin")]

[node name="DayNightManager" parent="MAP_DEVROOM1" index="0"]
enable_cycle = true
cycle_length = 15.0
sky_color = Color(0.0117647, 0, 0.741176, 1)

[node name="Sun" parent="MAP_DEVROOM1/DayNightManager" index="2"]
transform = Transform3D(0.876307, -0.417211, 0.240876, 0, 0.499997, 0.866026, -0.481754, -0.758904, 0.438151, 0, 0, 0)

[node name="SunCycle" parent="MAP_DEVROOM1/DayNightManager" index="3"]
speed_scale = 1.6

[node name="Player" parent="MAP_DEVROOM1" index="3" node_paths=PackedStringArray("inventory")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.6621, 0, 20.8424)
inventory = NodePath("../../UI/CanvasInventory/InventoryInferface/Inventory")

[node name="OmniLight3D" parent="MAP_DEVROOM1" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.0049, 7.9, 10.8599)
visible = true

[node name="OmniLight3D2" parent="MAP_DEVROOM1" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.72677, 0.9, 17.5983)
omni_range = 11.52
omni_attenuation = 0.422

[node name="MeshInstance3D" parent="MAP_DEVROOM1" index="20"]
visible = false

[node name="TreeBirch6" parent="MAP_DEVROOM1" instance=ExtResource("7_j45y5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.1, 0, 20.758)

[node name="StaticBody3D" type="StaticBody3D" parent="MAP_DEVROOM1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42.5, 0, 0)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="MAP_DEVROOM1/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 19.5)
shape = SubResource("BoxShape3D_o8jpl")

[node name="SpotLight3D" type="SpotLight3D" parent="MAP_DEVROOM1"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -7.8, 1.7, 19.1)
visible = false
spot_range = 10.0

[editable path="Viewport/SubViewportContainer/SubViewport/Camera"]
[editable path="WindowManager"]
[editable path="MAP_DEVROOM1"]
[editable path="MAP_DEVROOM1/DayNightManager"]
[editable path="MAP_DEVROOM1/DayNightManager/preview/test"]
[editable path="MAP_DEVROOM1/CameraLimit"]
[editable path="MAP_DEVROOM1/test"]
